--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,3 @@
-  
 image:
   file: Dockerfile
 
@@ -7,3 +6,6 @@ vscode:
     - muhammad-sammy.csharp
     - ionide.ionide-fsharp
     - ms-azuretools.vscode-docker
+
+tasks:
+  - init: zsh
